exports added, failing oidc test ignored for now