@@ -665,6 +665,9 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <useSystemClassLoader>false</useSystemClassLoader>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
 
@@ -732,7 +735,7 @@
 <!--        <artifactId>maven-javadoc-plugin</artifactId>-->
 <!--        <version>${maven-javadoc-plugin.version}</version>-->
 <!--        <configuration>-->
-<!--          <source>8</source>-->
+<!--          <source>17</source>-->
 <!--        </configuration>-->
 <!--        <executions>-->
 <!--          <execution>-->
